--- a/index.html
+++ b/index.html
@@ -94,208 +94,228 @@
   </div>
 
   <script>
-    // ── Firebase Init ─────────────────────────
-    const firebaseConfig = {
-      apiKey: "AIzaSyD3cdFU4K-LiPtkbVcQMmNp1701dvOEFW8",
-      authDomain: "vision-journal-proto.firebaseapp.com",
-      projectId: "vision-journal-proto",
-      storageBucket: "vision-journal-proto.appspot.com",
-      messagingSenderId: "1063775796504",
-      appId: "1:1063775796504:web:8effe01d8a1272afc9326d"
+  // ── Firebase Init ─────────────────────────
+  const firebaseConfig = {
+    apiKey: "AIzaSyD3cdFU4K-LiPtkbVcQMmNp1701dvOEFW8",
+    authDomain: "vision-journal-proto.firebaseapp.com",
+    projectId: "vision-journal-proto",
+    storageBucket: "vision-journal-proto.appspot.com",
+    messagingSenderId: "1063775796504",
+    appId: "1:1063775796504:web:8effe01d8a1272afc9326d"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth(), db = firebase.firestore();
+
+  // ── UI Refs ───────────────────────────────
+  const loginScreen   = document.getElementById('login-screen');
+  const journalScreen = document.getElementById('journal-screen');
+  const logoutBox     = document.getElementById('logout-box');
+  const loginMsg      = document.getElementById('login-msg');
+  const emailInput    = document.getElementById('email');
+  const passwordInput = document.getElementById('password');
+  const signupBtn     = document.getElementById('signup');
+  const loginBtn      = document.getElementById('login');
+  const logoutBtn     = document.getElementById('logout');
+  const saveBtn       = document.getElementById('save-entry');
+  const detectBtn     = document.getElementById('detect-location');
+  const locationDisp  = document.getElementById('location-display');
+  const manualDiv     = document.getElementById('manual-location');
+  const countryInput  = document.getElementById('country-input');
+  const stateInput    = document.getElementById('state-input');
+  const entriesList   = document.getElementById('entries');
+  const feedEntries   = document.getElementById('feed-entries');
+
+  // ── Leaflet Map ───────────────────────────
+  let map, leafletReady = false;
+  try {
+    map = L.map('map').setView([20,0],2);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution:'&copy; OpenStreetMap'
+    }).addTo(map);
+    leafletReady = true;
+  } catch(e){ console.warn('Leaflet init failed:', e) }
+
+  // ── Auth ───────────────────────────────────
+  signupBtn.onclick = () =>
+    auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value)
+        .catch(e => loginMsg.textContent = e.message);
+  loginBtn.onclick = () =>
+    auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
+        .catch(e => loginMsg.textContent = e.message);
+  logoutBtn.onclick = () => auth.signOut();
+
+  auth.onAuthStateChanged(user => {
+    if (user) {
+      loginScreen.classList.add('hidden');
+      journalScreen.classList.remove('hidden');
+      logoutBox.classList.remove('hidden');
+      if (leafletReady) setTimeout(()=>map.invalidateSize(),200);
+      loadJournal();
+    } else {
+      loginScreen.classList.remove('hidden');
+      journalScreen.classList.add('hidden');
+      logoutBox.classList.add('hidden');
+    }
+    loadPublicFeed();
+    if (leafletReady) plotPublicMarkers();
+  });
+
+  // ── Location Detection ─────────────────────
+  detectBtn.onclick = () => {
+    locationDisp.textContent = 'Detecting…';
+    fetch('https://ipapi.co/json/')
+      .then(r=>r.json())
+      .then(d => {
+        if (d.country_name && d.region) {
+          locationDisp.textContent = `${d.region}, ${d.country_name}`;
+          countryInput.value = d.country_name;
+          stateInput.value   = d.region;
+          manualDiv.classList.add('hidden');
+        } else throw '';
+      })
+      .catch(_ => {
+        locationDisp.textContent = 'Auto-detect failed; enter manually';
+        manualDiv.classList.remove('hidden');
+      });
+  };
+
+  // ── Save Entry + Geocode & Duplicate ──────
+  saveBtn.onclick = async () => {
+    const type     = document.getElementById('type').value;
+    const text     = document.getElementById('text').value;
+    const tags     = document.getElementById('tags').value
+                      .split(',').map(s=>s.trim()).filter(Boolean);
+    const isPublic = document.getElementById('isPublic').checked;
+    const country  = countryInput.value.trim();
+    const state    = stateInput.value.trim();
+    if (!country||!state) {
+      alert('Please detect or enter country & state.');
+      return;
+    }
+
+    // build payload
+    let payload = {
+      userId: auth.currentUser.uid,
+      type, text, tags, isPublic,
+      location:{country, state},
+      createdAt: firebase.firestore.FieldValue.serverTimestamp()
     };
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth(), db = firebase.firestore();
 
-    // ── UI Refs ───────────────────────────────
-    const loginScreen   = document.getElementById('login-screen');
-    const journalScreen = document.getElementById('journal-screen');
-    const logoutBox     = document.getElementById('logout-box');
-    const loginMsg      = document.getElementById('login-msg');
-    const emailInput    = document.getElementById('email');
-    const passwordInput = document.getElementById('password');
-    const signupBtn     = document.getElementById('signup');
-    const loginBtn      = document.getElementById('login');
-    const logoutBtn     = document.getElementById('logout');
-    const saveBtn       = document.getElementById('save-entry');
-    const detectBtn     = document.getElementById('detect-location');
-    const locationDisp  = document.getElementById('location-display');
-    const manualDiv     = document.getElementById('manual-location');
-    const countryInput  = document.getElementById('country-input');
-    const stateInput    = document.getElementById('state-input');
-    const entriesList   = document.getElementById('entries');
-    const feedEntries   = document.getElementById('feed-entries');
-
-    // ── Leaflet Map ───────────────────────────
-    let map, leafletReady = false;
     try {
-      map = L.map('map').setView([20,0],2);
-      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution:'&copy; OpenStreetMap'
-      }).addTo(map);
-      leafletReady = true;
-    } catch(e){ console.warn('Leaflet init failed:', e) }
-
-    // ── Auth ───────────────────────────────────
-    signupBtn.onclick = () =>
-      auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value)
-          .catch(e => loginMsg.textContent = e.message);
-    loginBtn.onclick = () =>
-      auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
-          .catch(e => loginMsg.textContent = e.message);
-    logoutBtn.onclick = () => auth.signOut();
-
-    auth.onAuthStateChanged(user => {
-      if (user) {
-        loginScreen.classList.add('hidden');
-        journalScreen.classList.remove('hidden');
-        logoutBox.classList.remove('hidden');
-        if (leafletReady) setTimeout(()=>map.invalidateSize(),200);
-        loadJournal();
-      } else {
-        loginScreen.classList.remove('hidden');
-        journalScreen.classList.add('hidden');
-        logoutBox.classList.add('hidden');
-      }
-      loadPublicFeed();
-      if (leafletReady) plotPublicMarkers();
-    });
-
-    // ── Location Detection ─────────────────────
-    detectBtn.onclick = () => {
-      locationDisp.textContent = 'Detecting…';
-      fetch('https://ipapi.co/json/')
-        .then(r=>r.json())
-        .then(d => {
-          if (d.country_name && d.region) {
-            locationDisp.textContent = `${d.region}, ${d.country_name}`;
-            countryInput.value = d.country_name;
-            stateInput.value   = d.region;
-            manualDiv.classList.add('hidden');
-          } else throw '';
-        })
-        .catch(_ => {
-          locationDisp.textContent = 'Auto-detect failed; enter manually';
-          manualDiv.classList.remove('hidden');
-        });
-    };
-
-    // ── Save Entry + Geocode & Duplicate ──────
-    saveBtn.onclick = async () => {
-      const type     = document.getElementById('type').value;
-      const text     = document.getElementById('text').value;
-      const tags     = document.getElementById('tags').value
-                        .split(',').map(s=>s.trim()).filter(Boolean);
-      const isPublic = document.getElementById('isPublic').checked;
-      const country  = countryInput.value.trim();
-      const state    = stateInput.value.trim();
-      if (!country||!state) {
-        alert('Please detect or enter country & state.');
-        return;
-      }
-
-      // build payload
-      let payload = {
-        userId: auth.currentUser.uid,
-        type, text, tags, isPublic,
-        location:{country, state},
-        createdAt: firebase.firestore.FieldValue.serverTimestamp()
-      };
-
-      try {
-        // save to user's journal
-        await db.collection('visions')
-          .doc(auth.currentUser.uid)
-          .collection('entries')
-          .add(payload);
-
-        // if public: geocode & duplicate
-        if (isPublic) {
-          const q = encodeURIComponent(`${state}, ${country}`);
-          const res = await fetch(
-            `https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${q}`
-          ).then(r=>r.json());
-
-          if (res && res[0]) {
-            payload.lat = parseFloat(res[0].lat);
-            payload.lon = parseFloat(res[0].lon);
-          }
-
-          await db.collection('publicEntries').add(payload);
-        }
-
-        document.getElementById('entry-msg').textContent = 'Saved!';
-        loadJournal();
-        loadPublicFeed();
-        plotPublicMarkers();
-      } catch(e) {
-        console.error(e);
-        document.getElementById('entry-msg').textContent = 'Save failed.';
-      }
-    };
-
-    // ── Load Personal Journal ───────────────────
-    function loadJournal(){
-      entriesList.innerHTML = '';
-      db.collection('visions')
+      // 1) user's journal
+      await db.collection('visions')
         .doc(auth.currentUser.uid)
         .collection('entries')
-        .orderBy('createdAt','desc')
-        .get()
-        .then(snap => snap.forEach(doc=>{
-          const d = doc.data();
-          const li = document.createElement('li');
-          li.textContent = `${d.type}: ${d.text}`;
-          entriesList.append(li);
-        }))
-        .catch(console.error);
+        .add(payload);
+
+      // 2) public copy + geocode
+      if (isPublic) {
+        const q = encodeURIComponent(`${state}, ${country}`);
+        const res = await fetch(
+          `https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${q}`
+        ).then(r=>r.json());
+        if (res[0]) {
+          payload.lat = parseFloat(res[0].lat);
+          payload.lon = parseFloat(res[0].lon);
+        }
+        await db.collection('publicEntries').add(payload);
+      }
+
+      document.getElementById('entry-msg').textContent = 'Saved!';
+      loadJournal();
+      loadPublicFeed();
+      plotPublicMarkers();
+    } catch(e) {
+      console.error(e);
+      document.getElementById('entry-msg').textContent = 'Save failed.';
     }
+  };
 
-    // ── Load Public Feed ───────────────────────
-    function loadPublicFeed(){
-      feedEntries.innerHTML = '';
-      let ref = db.collection('publicEntries')
-                  .orderBy('createdAt','desc');
-      if (!auth.currentUser) ref = ref.limit(10);
+  // ── Load Personal Journal ───────────────────
+  function loadJournal(){
+    entriesList.innerHTML = '';
+    db.collection('visions')
+      .doc(auth.currentUser.uid)
+      .collection('entries')
+      .orderBy('createdAt','desc')
+      .get()
+      .then(snap => snap.forEach(doc=>{
+        const d = doc.data();
+        const li = document.createElement('li');
+        li.textContent = `${d.type}: ${d.text}`;
+        entriesList.append(li);
+      }))
+      .catch(console.error);
+  }
 
-      ref.get()
-         .then(snap => {
-           if (snap.empty) {
-             feedEntries.innerHTML = '<p>No public entries.</p>';
-             return;
-           }
-           snap.forEach(doc => {
-             const d = doc.data();
-             const loc = d.location || {};
-             const locText = loc.state ? ` (${loc.state}, ${loc.country})` : '';
-             const li = document.createElement('li');
-             li.textContent = `${d.type}: ${d.text}${locText}`;
-             feedEntries.append(li);
-           });
-         })
-         .catch(e => {
-           console.error(e);
-           feedEntries.innerHTML = '<p>Error loading public feed.</p>';
+  // ── Load Public Feed ───────────────────────
+  function loadPublicFeed(){
+    feedEntries.innerHTML = '';
+    let ref = db.collection('publicEntries')
+                .orderBy('createdAt','desc');
+    if (!auth.currentUser) ref = ref.limit(10);
+
+    ref.get()
+       .then(snap => {
+         if (snap.empty) {
+           feedEntries.innerHTML = '<p>No public entries.</p>';
+           return;
+         }
+         snap.forEach(doc => {
+           const d = doc.data();
+           const loc = d.location || {};
+           const locText = loc.state ? ` (${loc.state}, ${loc.country})` : '';
+           const li = document.createElement('li');
+           li.textContent = `${d.type}: ${d.text}${locText}`;
+           feedEntries.append(li);
          });
-    }
+       })
+       .catch(e => {
+         console.error(e);
+         feedEntries.innerHTML = '<p>Error loading public feed.</p>';
+       });
+  }
 
-    // ── Plot Public Markers ────────────────────
-    function plotPublicMarkers(){
-      if (!leafletReady) return;
-      map.eachLayer(l => { if (l instanceof L.Marker) map.removeLayer(l) });
-      db.collection('publicEntries')
-        .where('lat','!=',null)
-        .get()
-        .then(snap => snap.forEach(doc => {
-          const d = doc.data();
+  // ── Plot Public Markers ────────────────────
+  function plotPublicMarkers(){
+    if (!leafletReady) return;
+    // clear old markers
+    map.eachLayer(layer=>{
+      if (layer instanceof L.Marker) map.removeLayer(layer);
+    });
+    // fetch **all** publicEntries
+    db.collection('publicEntries').get().then(snap=>{
+      snap.forEach(async doc=>{
+        const d = doc.data();
+        // if we already have coords, just plot
+        if (d.lat != null && d.lon != null) {
           L.marker([d.lat, d.lon])
-           .addTo(map)
-           .bindPopup(
-             `<strong>${d.type}</strong>: ${d.text}<br>` +
-             `<em>${d.location.state}, ${d.location.country}</em>`
-           );
-        }))
-        .catch(console.error);
-    }
-  </script>
+            .addTo(map)
+            .bindPopup(`<strong>${d.type}</strong>: ${d.text}<br>`+
+                       `<em>${d.location.state}, ${d.location.country}</em>`);
+        } else {
+          // geocode missing ones, update doc, then plot
+          const q = encodeURIComponent(`${d.location.state}, ${d.location.country}`);
+          try {
+            const res = await fetch(
+              `https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${q}`
+            ).then(r=>r.json());
+            if (res[0]) {
+              const lat = parseFloat(res[0].lat),
+                    lon = parseFloat(res[0].lon);
+              await doc.ref.update({ lat, lon });
+              L.marker([lat, lon])
+               .addTo(map)
+               .bindPopup(`<strong>${d.type}</strong>: ${d.text}<br>`+
+                          `<em>${d.location.state}, ${d.location.country}</em>`);
+            }
+          } catch(err){
+            console.error('Geocode fail:', err);
+          }
+        }
+      });
+    }).catch(console.error);
+  }
+</script>
 </body>
 </html>
